--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "postcss": "^8.4.47",
