--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
-    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "jodit-react": "^4.1.2",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
